--- a/package.json
+++ b/package.json
@@ -7,19 +7,18 @@
   "author": "James Mejia <s.jamesmejia@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "gulp": "^3.9.1"
+    "gulp": "^4.0.2",
+    "modern-normalize": "^0.5.0"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.18.8",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-babel": "^6.1.2",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-concat": "^2.6.1",
-    "gulp-imagemin": "^3.2.0",
+    "gulp-imagemin": "^6.2.0",
     "gulp-notify": "^3.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^2.1.2"
+    "gulp-uglify": "^3.0.2"
   }
 }
