--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "repository": "ssh://git@bitbucket.org/j_mejia/gulp-starter.git",
   "author": "James Mejia <s.jamesmejia@gmail.com>",
   "license": "MIT",
+  "browserslist": [
+    "> 1%",
+    "ie >= 10"
+  ],
   "dependencies": {
     "gulp": "^4.0.2",
     "modern-normalize": "^0.5.0"
