--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
+    "gulp-eslint": "^6.0.0",
     "gulp-imagemin": "^6.2.0",
     "gulp-notify": "^3.0.0",
     "gulp-rename": "^2.0.0",
