--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@babel/core": "^7.7.5",
     "@babel/preset-env": "^7.7.6",
     "browser-sync": "^2.18.8",
+    "dart-sass": "^1.24.0",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-eslint": "^6.0.0",
     "gulp-imagemin": "^6.2.0",
