--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "gulp-sass": "^4.0.2",
     "gulp-sass-glob": "^1.1.0",
     "gulp-sourcemaps": "^2.6.0",
-    "gulp-uglify": "^3.0.2"
+    "gulp-stylelint": "^11.0.0",
+    "gulp-uglify": "^3.0.2",
+    "stylelint": "^12.0.0",
+    "stylelint-config-recommended-scss": "^4.1.0",
+    "stylelint-scss": "^3.13.0"
   }
 }
