--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "modern-normalize": "^0.5.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.7.5",
-    "@babel/preset-env": "^7.7.6",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
     "browser-sync": "^2.18.8",
     "dart-sass": "^1.24.0",
     "gulp-autoprefixer": "^7.0.1",
+    "gulp-axe-webdriver": "^3.1.3",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
