--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-starter",
   "version": "1.0.0",
-  "description": "Starter kit for gulp projects. Uses Yarn for improved package management.",
+  "description": "Starter kit for gulp projects.",
   "main": "index.js",
   "repository": "ssh://git@bitbucket.org/j_mejia/gulp-starter.git",
   "author": "James Mejia <s.jamesmejia@gmail.com>",
@@ -11,30 +11,30 @@
     "ie >= 10"
   ],
   "dependencies": {
-    "gulp": "^4.0.2",
-    "modern-normalize": "^0.5.0"
+    "gulp": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
     "browser-sync": "^2.18.8",
     "dart-sass": "^1.24.0",
+    "eslint-config-prettier": "^8.2.0",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-axe-webdriver": "^3.1.3",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.1",
     "gulp-eslint": "^6.0.0",
-    "gulp-imagemin": "^6.2.0",
+    "gulp-imagemin": "^7.1.0",
     "gulp-notify": "^3.0.0",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.0.2",
     "gulp-sass-glob": "^1.1.0",
-    "gulp-sourcemaps": "^2.6.0",
-    "gulp-stylelint": "^11.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-stylelint": "^13.0.0",
     "gulp-uglify": "^3.0.2",
-    "stylelint": "^12.0.0",
-    "stylelint-config-recommended-scss": "^4.1.0",
-    "stylelint-scss": "^3.13.0"
+    "modern-normalize": "^1.0.0",
+    "prettier": "^2.2.1",
+    "stylelint-prettier": "^1.2.0",
+    "stylelint-scss": "^3.19.0"
   }
 }
