--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "gulp": "^4.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
+    "@babel/core": "^7.13.16",
     "@babel/preset-env": "^7.13.15",
     "browser-sync": "^2.26.14",
     "dart-sass": "^1.25.0",
@@ -22,8 +22,8 @@
     "gulp-autoprefixer": "^7.0.1",
     "gulp-axe-webdriver": "^3.1.3",
     "gulp-babel": "^8.0.0",
-    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
+    "gulp-dart-scss": "^1.1.0",
     "gulp-eslint": "^6.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-rename": "^2.0.0",
@@ -32,6 +32,7 @@
     "gulp-uglify": "^3.0.2",
     "modern-normalize": "^1.0.0",
     "prettier": "^2.2.1",
+    "stylelint": "^13.12.0",
     "stylelint-prettier": "^1.2.0",
     "stylelint-scss": "^3.19.0"
   }
